--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,16 @@
 html,
 body {
-  padding: 0;
+  padding: 1rem;
   margin: 0;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: transparent;
+  color: black;
+}
+@media (prefers-color-scheme: dark) {
+  body {
+    color: white;
+  }
 }
 
 a {
